--- a/client/src/css/Game.css
+++ b/client/src/css/Game.css
@@ -107,7 +107,7 @@
 
 /* Game info */
 .game-patch {
-  background-color: #ced4da !important;
+  background-color: #2c3138 !important;
 }
 
 .game-length-emoji,
