--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -14,6 +14,10 @@ html {
   font-size: 2.2rem; /* ~35px scaled by root font size */
 }
 
+.leaderboard-emoji {
+  font-size: 2rem;
+}
+
 @keyframes flicker {
   0%, 100% { opacity: 1; }
   50% { opacity: 0.8; }
@@ -46,5 +50,9 @@ html {
   
   .game-content {
     padding: 0.5rem;
+  }
+
+  .leaderboard-emoji {
+    font-size: 1.5rem;
   }
 }
