--- a/client/src/css/Game.css
+++ b/client/src/css/Game.css
@@ -106,38 +106,17 @@
 }
 
 /* Game info */
-.game-patch {
+.game-patch,
+.game-rank {
   background-color: #2c3138 !important;
 }
 
 .game-length-emoji,
-.game-patch-emoji {
+.game-patch-emoji,
+.game-rank-emoji {
   font-size: 2rem;
 }
 
-/* Responsive media query */
-@media (max-width: 768px) {
-  .champion-container,
-  .rune-container,
-  .spell-container {
-    width: 2.5rem;
-    height: 2.5rem;
-  }
-
-  .vs-text {
-    font-size: 1.2rem;
-  }
-
-  .game-length-emoji,
-  .game-patch-emoji {
-    font-size: 1.5rem;
-  }
-
-  .draft th,
-  .draft td {
-    padding: 0.3rem;
-  }
-}
 
 .play-button {
   background: linear-gradient(135deg, #ff4e50, #f9d423);
@@ -151,6 +130,8 @@
   position: relative;
   overflow: hidden;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  display: flex;
+  justify-content: center;
 }
 
 /* Shine Layer */
@@ -180,6 +161,34 @@
   }
 }
 
+/* Responsive media query */
+@media (max-width: 768px) {
+  .champion-container,
+  .rune-container,
+  .spell-container {
+    width: 2.5rem;
+    height: 2.5rem;
+  }
+
+  .vs-text {
+    font-size: 1.2rem;
+  }
+
+  .play-button {
+    font-size:1rem;
+  }
+
+  .game-length-emoji,
+  .game-patch-emoji,
+  .game-rank-emoji {
+    font-size: 1.5rem;
+  }
+
+  .draft th,
+  .draft td {
+    padding: 0.3rem;
+  }
+}
 
 @media (max-width: 500px) {
   .spell-container,
@@ -194,6 +203,10 @@
     width:100%;
     padding: 1rem 0;
     border-collapse: collapse;
+  }
+
+  .play-button {
+    font-size:1rem;
   }
 
 }
